--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
 
+android:layout_marginBottom="200dp"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="4dp"
         app:layout_anchor="@+id/recycler"
