--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,64 +3,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#896"
-    android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    >
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="91dp">
-        <Button
-            android:id="@+id/carButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="21dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="15dp"
-            android:text="Car" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="91dp"
-        android:layout_marginTop="90dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp">
 
         <EditText
             android:id="@+id/enterNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/carButton"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="43dp"
             android:ems="10"
-            android:hint="Enter Number"
+            android:gravity="center"
+            android:hint="@string/enter_number"
             android:inputType="textPersonName" />
     </LinearLayout>
+
     <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="91dp"
-        android:layout_marginTop="18dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/carButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/car" />
+
         <Button
             android:id="@+id/bikeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/carButton"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="23dp"
-            android:layout_marginRight="23dp"
-            android:text="Bike" />
+            android:text="@string/bike" />
 
     </LinearLayout>
 
-</LinearLayout>
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/next"
-        android:text="Show All"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/show_all" />
+
 </LinearLayout>
+
+
