lepak 05  ...Add Login Screen plus change All UI according to login screen

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#896"
+    android:background="#4e4e54"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp">
@@ -35,12 +35,19 @@
             android:id="@+id/carButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/car" />
+            android:text="@string/car"
+            android:layout_margin="5dp"
+            android:background="@drawable/selector_xml_btn_yellow"
+
+           />
 
         <Button
+            android:background="@drawable/selector_xml_btn_yellow"
             android:id="@+id/bikeButton"
+            android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="@string/bike" />
 
     </LinearLayout>
@@ -49,6 +56,7 @@
         android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#16afa8"
         android:text="@string/show_all" />
 
 </LinearLayout>
