--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#011</color>
-    <color name="colorPrimaryDark">#c1443d49</color>
-    <color name="colorAccent">#c13d99</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#050505</color>
+    <color name="colorAccent">#fffcfd</color>
 </resources>
