lepak 06  ...API authentication of login

--- a/app/src/main/res/drawable/selector_xml_btn_yellow.xml
+++ b/app/src/main/res/drawable/selector_xml_btn_yellow.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="true" >
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="8dp" />
-            <solid android:color="#3b818b" />
+            <solid android:color="#e016afa8" />
         </shape>
     </item>
     <item >
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="8dp" />
-            <solid android:color="#16afa8" />
+            <solid android:color="#c53b818b" />
         </shape>
     </item>
 </selector>
