--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -59,7 +59,13 @@
         android:layout_height="wrap_content"
         android:background="@drawable/selector_xml_btn_yellow"
         android:text="@string/show_all" />
-
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="match_parent"
+        android:layout_margin="21dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_xml_btn_yellow"
+        android:text="Exit" />
 </LinearLayout>
 
 
