--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codextech.ibtisam.lepak_app.activity.TicketActivity">
+    tools:context="com.codextech.ibtisam.lepak_app.activity.TicketPrintActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
