--- a/app/src/main/res/layout/edit_item.xml
+++ b/app/src/main/res/layout/edit_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <!--<EditText-->
-        <!--android:id="@+id/title"-->
+        <!--android:id="@+id/agentName"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
@@ -13,7 +13,7 @@
         <!--android:inputType="text" />-->
 
     <!--<EditText-->
-        <!--android:id="@+id/author"-->
+        <!--android:id="@+id/timeIn"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
