--- a/app/src/main/res/layout/item_tickets.xml
+++ b/app/src/main/res/layout/item_tickets.xml
@@ -7,10 +7,10 @@
     android:layout_height="wrap_content">
     <LinearLayout
         android:background="#4567"
-        android:layout_width="170dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:orientation="vertical"
-        android:weightSum="5">
+        android:weightSum="6">
 
         <TextView
             android:id="@+id/name"
@@ -23,9 +23,14 @@
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Time"
+            android:text="TimeIn"
             android:layout_weight="1"/>
-
+        <TextView
+            android:id="@+id/timeO"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TimeOut"
+            android:layout_weight="1"/>
 
 
         <TextView
@@ -51,25 +56,32 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="166dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginLeft="180dp"
+        android:layout_marginLeft="100dp"
         android:orientation="vertical"
         android:weightSum="5">
 
         <TextView
-            android:id="@+id/text_books_title"
+            android:id="@+id/agnetName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:layout_weight="1"/>
 
         <TextView
-            android:id="@+id/text_books_author"
+            android:id="@+id/timeIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/timeOut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/Dnumber"
