--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -3,46 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#838387"
-    android:padding="10dp"
-
-    >
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
         android:layout_margin="30dp"
-
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/edLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/account"
+            android:gravity="center"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:hint="Username"
+            android:hint="Location"
             android:inputType="textEmailAddress"
             android:paddingLeft="0dp"
             android:textColor="#FFF"
-            android:textColorHint="#fffefe" />
+            android:textColorHint="#000" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/edSite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:drawableLeft="@drawable/lock"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
+            android:hint="Site"
+            android:inputType="textEmailAddress"
             android:paddingLeft="0dp"
             android:textColor="#FFF"
-            android:textColorHint="#ffffff" />
+            android:textColorHint="#000" />
 
         <Button
             android:id="@+id/btLogin"
@@ -52,17 +47,9 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/selector_xml_btn_yellow"
             android:onClick="checkLogin"
-            android:text="Sign In" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:text="Forgot password?"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#FFF" />
+            android:text="Next" />
 
     </LinearLayout>
 </LinearLayout>
+
+
