--- a/app/src/main/res/drawable/selector_xml_btn_yellow.xml
+++ b/app/src/main/res/drawable/selector_xml_btn_yellow.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" >
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="8dp" />
-            <solid android:color="#e0364847" />
+            <solid android:color="#c9caca" />
         </shape>
     </item>
     <item >
