--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,18 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     android:orientation="vertical"
-    android:background="#838387"
-    android:padding="10dp"
-
-    >
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
         android:layout_margin="30dp"
-
         android:orientation="vertical">
 
         <EditText
@@ -24,7 +20,7 @@
             android:drawableLeft="@drawable/account"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:hint="Username"
+            android:text="doctorhospital@lepark.com"
             android:inputType="textEmailAddress"
             android:paddingLeft="0dp"
             android:textColor="#FFF"
@@ -38,7 +34,7 @@
             android:drawableLeft="@drawable/lock"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:hint="Password"
+            android:text="lepark1234"
             android:inputType="textPassword"
             android:paddingLeft="0dp"
             android:textColor="#FFF"
@@ -63,6 +59,5 @@
             android:text="Forgot password?"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#FFF" />
-
     </LinearLayout>
 </LinearLayout>
