--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,19 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
-    android:background="@color/black">
+    android:layout_height="@dimen/nav_header_height"
+    android:background="@drawable/lepark"
+    android:gravity="bottom"
+    android:orientation="horizontal"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Zedge"
+        android:orientation="vertical">
 
-        android:id="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:padding="55dp"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:layout_alignParentLeft="true" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/view2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:elevation="12dp"
+            android:innerRadius="0dp"
+            android:shape="ring"
+            android:thicknessRatio="1.9"
+            app:cardCornerRadius="40dp">
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/ivProfileImgNavBar"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="lEVEL" />
+
+        </android.support.v7.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/tvProfileNameNavBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:text="Touqeer"
+            android:textColor="#000" />
+
+        <TextView
+            android:id="@+id/tvProfileNumberNavBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+923228899906"
+            android:textColor="#000" />
+    </LinearLayout>
+
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="80dp"-->
+    <!--android:layout_height="80dp"-->
+    <!--android:orientation="vertical"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:layout_marginLeft="30dp">-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/ivLogo"-->
+    <!--android:layout_width="80dp"-->
+    <!--android:layout_height="80dp"-->
+    <!--android:src="@drawable/railway_landscape"-->
+    <!--android:contentDescription="Lasting Sales Logo" />-->
+    <!--</LinearLayout>-->
+</LinearLayout>
