--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0079"
+    android:id="@+id/printt"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp">
@@ -22,33 +23,35 @@
             android:textColorHint="#FFC9CACA"
             android:gravity="center"
             android:hint="@string/enter_number"
-            android:inputType="textPersonName" />
+            android:inputType="number" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:weightSum="2">
 
         <Button
             android:id="@+id/carButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:background="@drawable/selector_xml_btn_yellow"
-            android:text="Print Car" />
+            android:text="Print Car"
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/bikeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:background="@drawable/selector_xml_btn_yellow"
             android:text="Print bike"
-            />
+            android:layout_weight="1" />
 
     </LinearLayout>
     </LinearLayout>
