--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -19,6 +20,13 @@
             app:layout_scrollFlags="enterAlways" />
 
     </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
+        android:padding="30dp"
+        android:layout_height="300dp"
+        android:orientation="horizontal"
+        >
 <LinearLayout
     android:layout_width="160dp"
     android:layout_marginTop="60dp"
@@ -30,12 +38,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Total Ticket"
+        android:textSize="20dp"
+        android:textColor="#000"
+        android:layout_marginTop="60dp"
+        />
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Total Amount"
+        android:textSize="20dp"
+        android:textColor="#000"
         android:layout_marginTop="60dp"
         />
 </LinearLayout>
     <LinearLayout
-        android:layout_width="200dp"
-        android:layout_marginLeft="160dp"
+        android:layout_width="wrap_content"
+
         android:layout_marginTop="60dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -47,5 +66,22 @@
 
             android:layout_marginTop="60dp"
             />
+
+        <TextView
+            android:id="@+id/tvTicketTotal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="72dp"
+            />
     </LinearLayout>
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/bPrintSummaryp"
+        android:layout_marginTop="330dp"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="120dp"
+        android:layout_height="wrap_content"
+        android:text="Print Summary" />
+</android.support.design.widget.CoordinatorLayout>
