--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -1,87 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:orientation="vertical">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="enterAlways" />
-
-    </android.support.design.widget.AppBarLayout>
+    android:background="@color/edback"
+    android:layout_margin="15dp">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:padding="30dp"
-        android:layout_height="300dp"
-        android:orientation="horizontal"
-        >
-<LinearLayout
-    android:layout_width="160dp"
-    android:layout_marginTop="60dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
-    <TextView
+    android:layout_margin="10dp"
+    android:weightSum="9">
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total Ticket"
-        android:textSize="20dp"
-        android:textColor="#000"
-        android:layout_marginTop="60dp"
-        />
-    <TextView
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total Amount"
-        android:textSize="20dp"
-        android:textColor="#000"
-        android:layout_marginTop="60dp"
-        />
-</LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:weightSum="2">
 
-        android:layout_marginTop="60dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Total Ticket"
+                android:textColor="#000"
+                android:textSize="20dp" />
         <TextView
             android:id="@+id/tvTicketCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
 
-            android:layout_marginTop="60dp"
-            />
-
-        <TextView
-            android:id="@+id/tvTicketTotal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="72dp"
-            />
-    </LinearLayout>
+           />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:weightSum="2">
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total Amount"
+                android:layout_weight="1"
+                android:textColor="#000"
+                android:textSize="20dp" />
+  =
+            <TextView
+                android:id="@+id/tvTicketTotal"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:weightSum="2">
     <Button
         android:id="@+id/bPrintSummaryp"
-        android:layout_marginTop="330dp"
         android:layout_width="wrap_content"
-        android:layout_marginLeft="120dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="85dp"
         android:text="Print Summary" />
-</android.support.design.widget.CoordinatorLayout>
+        </LinearLayout>
+</LinearLayout>
+</RelativeLayout>
