--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="orange">#904a7a</color>
     <color name="white">#FFF</color>
     <color name="gery">#494242</color>
+    <color name="textcolor">#FFF</color>
+    <color name="edback">#abb0b1</color>
+    <color name="pageback">#FFF</color>
+    <color name="mainToolColor">@color/colorPrimary</color>
+
 </resources>
